# rhelma-core

./: .editorconfig  .env.example  .gitignore  CODE_OF_CONDUCT.md  COMMERCIAL_BOUNDARY.md  COMMERCIAL_FEATURES.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_GUIDE.md  OPEN_CORE_MANIFESTO.md  OPEN_CORE_SCOPE.md  OPEN_SOURCE_MANIFEST.md  README.md  README.md.bak  README_OPENCORE.md  RELEASE_NOTES_v0.1.0.md  ROADMAP.md  SECURITY.md  turbo.json
adapters/rhelma-event-kafka/: Cargo.toml  README.md
adapters/rhelma-event-kafka/examples/: roundtrip.rs  roundtrip_env.rs
adapters/rhelma-event-kafka/src/: bus.rs  consumer.rs  dlq.rs  evidence_adapter.rs  idempotency.rs  lib.rs  producer.rs  reason.rs
adapters/rhelma-event-kafka/tests/: config_validation_test.rs  headers_contract_v52_test.rs  integration_kafka_roundtrip_test.rs  otel_context_extraction_test.rs  otel_producer_injection_test.rs  scoped_context_from_headers_test.rs  transport_context_roundtrip_v52_test.rs
apps/api-gateway/: Cargo.toml  Dockerfile  README.md  http_metrics.rs
apps/api-gateway/distributed_circuit_breaker/: distributed_circuit_breaker.rs
apps/api-gateway/distributed_circuit_breaker_improvement/: distributed_circuit_breaker_redis.rs
apps/api-gateway/error_handling_update/: error_handling.rs
apps/api-gateway/graphql/: graphql_server.rs
apps/api-gateway/openapi/: openapi.json
apps/api-gateway/src/: config.rs  docs.rs  error.rs  eventing.rs  lib.rs  main.rs  metrics_endpoint.rs  openapi.rs  region_routing.rs  services.rs  utils.rs
apps/api-gateway/tests/: config_cors_validation_test.rs  discovery_config_test.rs  e2e_inprocess.rs  error_envelope_test.rs  http_contract_v52_test.rs  kafka_region_failover_override_e2e.rs  upstream_header_propagation_test.rs
apps/file-storage/: Cargo.toml  README.md
apps/file-storage/migrations/: 0001_init.sql
apps/file-storage/src/: config.rs  context.rs  error.rs  health.rs  main.rs  metrics_endpoint.rs  metrics_endpoint_test.rs  state.rs
apps/node-registry/: Cargo.toml  README.md
apps/node-registry/src/: attestation_verify.rs  config.rs  crypto.rs  docs.rs  error.rs  main.rs  metrics_endpoint.rs  models.rs  openapi.rs  routes.rs  routing_snapshot.rs  state.rs  store.rs
apps/realtime-service/: Cargo.toml  Dockerfile  README.md  http_metrics.rs
apps/realtime-service/src/: error.rs  lib.rs  main.rs  metrics_endpoint.rs
apps/realtime-service/tests/: integration_auth_test.rs  metrics_endpoint_200.rs  ws_contract_v52_headers.rs
apps/rhelma-attestation-verifier/: Cargo.toml  README.md
apps/rhelma-attestation-verifier/src/: main.rs
apps/sandbox-runner/: Cargo.toml  README.md
apps/sandbox-runner/src/: context_enforcer_tests.rs  main.rs  worker_chaos_tests.rs
apps/search-service/: Cargo.toml  Dockerfile  README.md
apps/search-service/src/: config.rs  main.rs  metrics_endpoint.rs  metrics_endpoint_test.rs
apps/search-service/tests/: metrics_endpoint_smoke.rs
apps/social-service/: Cargo.toml  README.md
apps/social-service/src/: config.rs  error.rs  lib.rs  main.rs  models.rs  state.rs
apps/social-service/tests/: social_smoke_test.rs
crates/rhelma-ai-attestation/: Cargo.toml  README.md
crates/rhelma-ai-attestation/hardware_attestation/: hardware_attestation.rs
crates/rhelma-ai-attestation/src/: lib.rs
crates/rhelma-ai-contracts/: Cargo.toml  README.md
crates/rhelma-ai-contracts/src/: governance.rs  improvements.rs  lib.rs
crates/rhelma-attestation/: Cargo.toml
crates/rhelma-attestation/src/: lib.rs
crates/rhelma-auth/: Cargo.toml  README.md
crates/rhelma-auth/src/: config.rs  error.rs  internal_service.rs  jwt.rs  jwt_verify.rs  lib.rs  metrics.rs  prelude.rs  tracing_ext.rs  types.rs
crates/rhelma-auth/tests/: jwt_cross_service.rs  jwt_roundtrip.rs  password_tests.rs  policy_tests.rs
crates/rhelma-cache/: Cargo.toml  README.md
crates/rhelma-cache/src/: config.rs  error.rs  lib.rs  macros.rs  metrics.rs  prelude.rs  tracing_ext.rs  types.rs
crates/rhelma-cache/tests/: eviction_tests.rs
crates/rhelma-capabilities/: Cargo.toml
crates/rhelma-capabilities/src/: lib.rs
crates/rhelma-config/: CHANGELOG.txt  Cargo.toml  PATCH_NOTES.md  README.md
crates/rhelma-config/src/: builder.rs  central_env.rs  core_config.rs  deprecation.rs  errors.rs  governance.rs  lib.rs  loader.rs  merge.rs  models.rs  provider.rs  resolver.rs  runtime.rs  validation.rs
crates/rhelma-config/tests/: basic_tests.rs  central_env_strict_tests.rs  loader_tests.rs  merge_tests.rs  resolver_tests.rs  runtime_tests.rs
crates/rhelma-core/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GUIDE.md  README.md
crates/rhelma-core/benches/: request_context.rs
crates/rhelma-core/docs/: 01-ARCHITECTURE.md  02-ERROR-HANDLING.md  03-REQUEST-CONTEXT.md  04-CONFIGURATION.md  05-TENANCY-RESIDENCY.md  06-TYPE-SYSTEM.md  07-OBSERVABILITY.md  10-INTEGRATION-GUIDE.md  12-V52-MIGRATION.md  A1-API-REFERENCE.md  INDEX.md  VERSIONS.md
crates/rhelma-core/examples/: region_health_demo.rs
crates/rhelma-core/src/: config.rs  constants.rs  environment.rs  error.rs  error_envelope.rs  error_v52.rs  http_error.rs  lib.rs  multi_region.rs  observability.rs  prelude.rs  problem.rs  realtime_types.rs  region_health.rs  request_context.rs  request_context_v52.rs  result.rs  security.rs  tenancy.rs  trace_context.rs
crates/rhelma-core/tests/: config_test.rs  config_validation_test.rs  contract_error_v52_snapshot.rs  edge_cases_test.rs  email_test.rs  error_ext_test.rs  fuzz_like_ids_test.rs  governance_critical_test.rs  (+11 more)
crates/rhelma-db/: ALIGNMENT_NOTES.md  Cargo.toml  README.md
crates/rhelma-event/: Cargo.toml  README.md
crates/rhelma-health/: Cargo.toml
crates/rhelma-http-observability/: Cargo.toml  README.md
crates/rhelma-logger/: CHANGELOG_0_13_0_enterprise.txt  Cargo.toml  README.md
crates/rhelma-metrics/: Cargo.toml  README.md
crates/rhelma-policy/: Cargo.toml
crates/rhelma-sandbox-runner/: Cargo.toml  README.md
crates/rhelma-tracing/: Cargo.toml  README.md
observability/agent/: Cargo.toml  README.md
observability/core/: Cargo.toml  README.md
(+734 files in other folders)
