[package]
name = "api-gateway"
version = "0.1.1"
edition = "2021"

[dependencies]
axum = { workspace = true }
axum-prometheus = { workspace = true }
metrics-exporter-prometheus = { workspace = true }

tokio = { workspace = true , features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "request-id", "timeout"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "v7", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

dotenvy = "0.15.7"

sqlx = { workspace = true, features = ["runtime-tokio", "postgres", "chrono", "uuid"] }
redis = { workspace = true, features = ["tokio-comp", "connection-manager"] }
rhelma-core = { path = "../../crates/rhelma-core" }
rhelma-config = { workspace = true }
rhelma-db = { path = "../../crates/rhelma-db" }
rhelma-auth = { path = "../../crates/rhelma-auth" }
rhelma-observability-core = { path = "../../observability/core" }
rhelma-http-observability = { path = "../../crates/rhelma-http-observability" }
rhelma-tracing = { path = "../../crates/rhelma-tracing" }
rhelma-metrics = { workspace = true }
metrics = { workspace = true }
rhelma-event = { path = "../../crates/rhelma-event" }
rhelma-event-kafka = { path = "../../crates/rhelma-event-kafka", optional = true }

tracing = { workspace = true }
once_cell = "1.20.2"
humantime = "2"
secrecy = { workspace = true }

reqwest = { workspace = true, features = ["json", "rustls-tls"] }
validator = { workspace = true, features = ["derive"] }

blake3 = "1.5"
hex = { workspace = true }

# Optional OpenAPI/Swagger UI generation (behind feature flag to keep default build slim).
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"], optional = true }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"], optional = true }

[features]
default = []
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]
kafka-events = ["dep:rhelma-event-kafka"]

[dev-dependencies]
# Needed for `ServiceExt::oneshot` in integration tests.
tower = { workspace = true }


