[package]
name = "file-storage-service"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Multi-tenant, multi-region file storage service for Rhelma platform"
publish = false

[dependencies]
# Web
axum = { workspace = true, features = ["multipart"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-br", "limit"] }
hyper = { workspace = true }

# Async & runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Serialization & utils
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["serde", "v4", "v7"] }
thiserror = { workspace = true }
bytes = "1.6"
mime = "0.3"
blake3 = "1.5"

# Config & secrets
config = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }

# Database & SQL
sqlx = { workspace = true, features = ["postgres", "uuid", "chrono", "migrate", "runtime-tokio-rustls"] }

# Object storage (S3-compatible)
aws-sdk-s3 = { version = "1.50.0", features = ["rt-tokio"] }
aws-config = { version = "1.8.11", features = ["behavior-version-latest"] }
aws-credential-types = "1.2"

# Rhelma crates
rhelma-core = { path = "../../crates/rhelma-core" }
rhelma-tracing = { path = "../../crates/rhelma-tracing" }
rhelma-logger = { path = "../../crates/rhelma-logger" }
rhelma-metrics = { path = "../../crates/rhelma-metrics" }
rhelma-event = { path = "../../crates/rhelma-event" }
rhelma-config = { path = "../../crates/rhelma-config" }
rhelma-observability-core = { path = "../../observability/core" }
rhelma-http-observability = { path = "../../crates/rhelma-http-observability" }

# Prometheus scrape endpoint
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
once_cell = "1.18"

tracing = { workspace = true }
[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
mockall = "0.13"
tokio-test = "0.4"

[features]
default = []
antivirus = []
