[package]
name = "node-registry"
version = "0.1.1"
edition = "2021"

[dependencies]
metrics-exporter-prometheus = { version = '0.15.3', default-features = false }
axum = { workspace = true, features = ["macros"] }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "request-id", "timeout"] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
redis = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
dotenvy = "0.15.7"
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# Optional API documentation (kept off by default).
utoipa = { version = "4.2.3", features = ["axum_extras", "chrono"], optional = true }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"], optional = true }

tracing = { workspace = true }
once_cell = "1.20.2"
humantime = "2"
secrecy = { workspace = true }

hex = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
ed25519-dalek = "2"

rhelma-core = { path = "../../crates/rhelma-core" }
rhelma-config = { workspace = true }
rhelma-observability-core = { path = "../../observability/core" }
rhelma-http-observability = { path = "../../crates/rhelma-http-observability" }
rhelma-tracing = { path = "../../crates/rhelma-tracing" }
rhelma-event = { path = "../../crates/rhelma-event" }

[dev-dependencies]
tower = { workspace = true }

[features]
# Optional scaffolding features (kept off by default so clippy -D warnings stays clean).
federation-sync = []
deposit-hold = []

# Optional OpenAPI generation + Swagger UI.
openapi = ["dep:utoipa", "dep:utoipa-swagger-ui"]
