[package]
name = "rhelma-attestation-verifier"
version = "6.0.0"
edition = "2021"
publish = false

[dependencies]
base64 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
ed25519-dalek = "2"
