[package]
name = "sandbox-runner"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rhelma-config = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

rhelma-event = { workspace = true }
rhelma-event-kafka = { workspace = true }
rhelma-tracing = { workspace = true }

rhelma-ai-contracts = { path = "../../crates/rhelma-ai-contracts" }
rhelma-sandbox-runner = { path = "../../crates/rhelma-sandbox-runner" }
rhelma-ai-attestation = { path = "../../crates/rhelma-ai-attestation" }
