[package]
name = "search-service"
version = "0.3.0-enterprise-pro"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Enterprise search service with hybrid vector + full-text search aligned with Rhelma contract v4.2"
publish = false

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace", "compression-br"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = "3"
anyhow = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { version = "0.15.3", default-features = false }
once_cell = "1.18"
futures = { workspace = true }
whatlang = { version = "0.16", optional = true }

# Rhelma platform crates (paths may need adjustment to your workspace)
rhelma-core = { path = "../../crates/rhelma-core" }
rhelma-config = { workspace = true }
rhelma-db = { path = "../../crates/rhelma-db" }
rhelma-cache = { path = "../../crates/rhelma-cache" }
rhelma-event = { path = "../../crates/rhelma-event" }
rhelma-auth = { path = "../../crates/rhelma-auth" }
rhelma-observability-core = { path = "../../observability/core" }
rhelma-tracing = { path = "../../crates/rhelma-tracing" }


# Optional: vector & search backends (you can tweak versions/features)
qdrant-client = "1"
meilisearch-sdk = "0.25"
tch = { version = "0.17", optional = true }
rhelma-metrics = { path = "../../crates/rhelma-metrics" }
rhelma-http-observability = { path = "../../crates/rhelma-http-observability" }
[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }


[features]
# Build default search-service without libtorch.
default = []
embeddings-torch = ["tch"]
query-understanding = ["whatlang"]
