[package]
name = "social-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tenant-scoped social/news service (posts, comments, reactions) aligned with Rhelma contract"
publish = false

[dependencies]
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace", "compression-br"] }
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
once_cell = "1.18"
futures = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }
secrecy = { workspace = true }
blake3 = "1.5"
hex = { workspace = true }

rhelma-config = { workspace = true }
rhelma-core = { workspace = true }
rhelma-db = { workspace = true }
rhelma-auth = { workspace = true }
rhelma-http-observability = { workspace = true }
rhelma-observability-core = { path = "../../observability/core" }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
serde_json = { workspace = true }
