[package]
name = "rhelma-config"
version = "5.2.1"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

[features]
default = []
strict-validation = ["regex", "url"]
dashmap-cache = ["dashmap"]

[dependencies]
rhelma-core = { path = "../rhelma-core" }

secrecy = { workspace = true, features = ["serde"] }
semver = "1.0"
config = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
async-trait = { workspace = true }
once_cell = "1.19"
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
dashmap = { version = "5.5", optional = true }
regex = { version = "1.10", optional = true }
url = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }












