[package]
name = "rhelma-event"
version = "0.2.0-enterprise-pro"
edition = "2021"
license = "MIT"

[features]
# Stricter docs linting for CI; opt-in.
strict-docs = []

# Compatibility: accept signatures computed over the *hex string bytes* of the payload hash.
# This is NOT recommended and is disabled by default.
audit-compat-hex-sig = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
rhelma-core = { path = "../rhelma-core" }
rhelma-tracing = { path = "../rhelma-tracing" }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
ed25519-dalek = "2"
hex = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["preserve_order"] }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v7"] }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tokio = { workspace = true, features = ["macros", "rt"] }
