[package]
name = "rhelma-http-observability"
version = "0.1.0-enterprise-pro"
edition = "2021"
publish = false
description = "Shared HTTP observability helpers (Axum/Tower + Reqwest) aligned with Rhelma Contract v5.2"

[features]
# Most services need outbound propagation, so keep it on by default.
default = ["reqwest", "otel"]

# Enable reqwest helpers.
reqwest = ["dep:reqwest"]

# Enable OpenTelemetry propagation (best-effort) for outbound calls.
otel = ["dep:opentelemetry", "dep:tracing-opentelemetry"]

[dependencies]
axum = { workspace = true, features = ["http1"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
uuid = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
tokio = { workspace = true }
ipnet = { workspace = true }

reqwest = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }

rhelma-core = { workspace = true }
rhelma-tracing = { workspace = true }
