[package]
name = "rhelma-metrics"
version = "0.5.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Deterministic metrics helpers for Rhelma observability."

[features]
default = []
prometheus = []
otel = []
with-config = ["rhelma-config"]

[dependencies]
metrics = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
rhelma-config = { path = "../rhelma-config", optional = true }
once_cell = "1.18"
regex = "1.10"








smallvec = "1.13"
