[package]
name = "rhelma-sandbox-runner"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
validator = { workspace = true }
uuid = { workspace = true }

rhelma-ai-contracts = { path = "../rhelma-ai-contracts" }
rhelma-ai-attestation = { path = "../rhelma-ai-attestation" }

# Small utility deps (runtime only)
tempfile = "3.10"

